[package]
name = "dui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.27"
human_bytes = "0.4"
ignore = "0.4"
